# rust-titanic

./: .gitignore  Cargo.toml  Makefile.toml  README.md
crates/exp001/: Cargo.toml
crates/exp001/src/: config.rs  feature.rs  kfold.rs  lib.rs  main.rs  model.rs  runner.rs
crates/exp002/: Cargo.toml
crates/exp002/src/: consts.rs  loader.rs  main.rs  model.rs  runner.rs  submission.rs
src/: kfold.rs  lib.rs  loader.rs  main.rs  metrics.rs  model.rs
