[package]
name = "rust-titanic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
csv = "1.1.6"
lightgbm = "0.2.3"
rand = "0.8.5"
serde_json = "1.0.85"

[dev-dependencies]
rstest = "0.15.0"
